--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -3,12 +3,15 @@ $if content.title is not None:
 	$ title = content.title + ' | ' + site_title
 $else:
 	$ title = site_title
-<html>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="zh-CN">
 	<head> 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="icon" type="image/png" href="/static/img/favicon.ico">
 		<link rel="stylesheet" href="/static/css/shared.css" />
 		<link rel="stylesheet" href="/static/css/main.css" />
+		<link rel="stylesheet" href="/static/css/desktop.css" />
 		<script type="text/javascript" src="/static/js/jquery.js"></script>
 		<script type="text/javascript" src="/static/js/main.js"></script>
 		<title>$title</title>
@@ -59,7 +62,7 @@ $else:
 	            </div>
 	        </div>
 	    </div>
-		<div id="wrapper">
+		<div id="Wrapper">
 			<div class="content">
 				<div id="Rightbar">
 					<div class="sep20">
