--- a/tpl/admin/index.html
+++ b/tpl/admin/index.html
@@ -1,2 +1,65 @@
-$def with(title)
+$def with (title, site_count, cats, crumb)
+$var site_count = site_count
 $var title:$title
+<div id="Main">
+	<div class="sep20">
+	</div>
+	<div class="box">
+        <div class="header">
+	    	$:crumb
+	    </div>
+        <div class="grid" style="font-size: 14px;">
+            <table cellpadding="10" cellspacing="0" border="0" width="100%">
+                <tbody><tr>
+                    <td align="center" valign="top" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;"><img src="/static/img/app48.png" align="absmiddle"></td>
+                    <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;"><a href="/backstage/site">站点设置</a>
+                    <div class="sep10">
+                    </div>
+                    <span class="fade" style="font-size: 12px">站点名，标语，描述及谁可以发贴，谁可以回帖。</span>    
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;"><img src="/static/img/write48.png" align="absmiddle"></td>
+                    <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;"><a href="/backstage/topic">主题设置</a>
+                    <div class="sep10">
+                    </div>
+                    <span class="fade" style="font-size: 12px">配置主题类型。</span>    
+                    </td>
+                </tr>
+            </tbody></table>
+        </div>
+    </div>
+    <div class="sep20">
+    </div>
+    <div class="box">
+        <div class="cell"><div class="fr">
+	        <div class="sep5">
+	        </div>
+        <a href="/admin/add_cat" class="super normal button">添加新分类</a></div>
+        <div class="sep5">
+        </div><span class="fade">分类</span>
+        <div class="sep3">
+        </div>
+        </div>
+        <div class="grid" style="font-size: 14px;">
+            <table cellpadding="10" cellspacing="0" border="0" width="100%">
+                <tbody>
+					$if cats:
+						$for cat_cur in cats:
+							$ cat = cat_cur['cat']
+							<tr>
+							<td align="center" valign="middle" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;">
+								<strong style="font-size: 24px; font-family: DINPro">$cat_cur['node_total']</strong>
+							</td>
+							<td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;">
+								<a href="/admin/category/$cat.name">$cat.display_name</a>
+                            <div class="sep10">
+                            </div>
+                            <span class="fade" style="font-size: 12px">$cat.description</span>    
+                            </td>
+							</tr>
+            	</tbody>
+            </table>
+        </div>
+    </div>
+</div>
