--- a/tpl/login.html
+++ b/tpl/login.html
@@ -1,7 +1,8 @@
 $def with (form, title, crumb)
 $var title : $title
 <div id="Main">
-<div class="sep20"></div>
+<div class="sep20">
+</div>
 <div class="box">
     <div class="header">
     	$:crumb
