--- a/tpl/admin/index.html
+++ b/tpl/admin/index.html
@@ -52,7 +52,7 @@ $var title:$title
 								<strong style="font-size: 24px; font-family: DINPro">$cat_cur['node_total']</strong>
 							</td>
 							<td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;">
-								<a href="/admin/category/$cat.name">$cat.display_name</a>
+								<a href="/admin/cat/$cat.name">$cat.display_name</a>
                             <div class="sep10">
                             </div>
                             <span class="fade" style="font-size: 12px">$cat.description</span>    
