--- a/tpl/admin/index.html
+++ b/tpl/admin/index.html
@@ -1,6 +1,6 @@
-$def with (title, site_count, cats, crumb)
-$var site_count = site_count
+$def with (title, cats, crumb)
 $var title:$title
+$var widgets=['site_statics_widget']
 <div id="Main">
 	<div class="sep20">
 	</div>
