--- a/tpl/admin/cat_view.html
+++ b/tpl/admin/cat_view.html
@@ -1,2 +1,16 @@
-$def with(title, crumb, cat, nodes
+$def with(title, crumb, cat, form, nodes)
 $var title:$title
+$var widgets=None
+<div id="Main">
+    <div class="sep20"></div>
+    <div class="box">
+        <div class="header">
+            $:crumb
+        </div>
+        <div class="inner">
+            <form method="post">
+                $:form.render() 
+            </form>
+        </div>
+    </div>
+</div>
