--- a/tpl/admin/cat_view.html
+++ b/tpl/admin/cat_view.html
@@ -9,8 +9,30 @@ $var widgets=None
         </div>
         <div class="inner">
             <form method="post">
-                $:form.render() 
+                $:form.render_css() 
             </form>
+        </div>
+    </div>
+    <div class="sep20"></div>
+    <div class="box">
+        <div class="cell"><div class="fr"><a href="/admin/create_cat/$cat.name" class="super normal button">添加新节点</a></div><span class="fade">分类下的节点</span></div>
+        <div class="grid" style="font-size: 14px;">
+            $if nodes:
+                $ num = 0
+                $for node in nodes:
+                    $ num += 1
+                    <table cellpadding="10" cellspacing="0" border="0" width="100%">
+                        <tbody><tr>
+                            <td align="center" valign="middle" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;">
+                                <strong style="font-size: 24px; font-family: DINPro">$num</strong>
+                            </td>
+                            <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;">
+                                <a href="/backstage/node/node">$node.name</a>
+                                <div class="sep10"></div>
+                                <span class="fade" style="font-size: 12px">$node.description</span>
+                            </td>
+                        </tr>
+                    </tbody></table>
         </div>
     </div>
 </div>
