backstage add cat

--- a/tpl/admin/index.html
+++ b/tpl/admin/index.html
@@ -2,12 +2,12 @@ $def with (title, cats, crumb)
 $var title:$title
 $var widgets=['site_statics_widget']
 <div id="Main">
-	<div class="sep20">
-	</div>
-	<div class="box">
+    <div class="sep20">
+    </div>
+    <div class="box">
         <div class="header">
-	    	$:crumb
-	    </div>
+            $:crumb
+        </div>
         <div class="grid" style="font-size: 14px;">
             <table cellpadding="10" cellspacing="0" border="0" width="100%">
                 <tbody><tr>
@@ -33,9 +33,9 @@ $var widgets=['site_statics_widget']
     </div>
     <div class="box">
         <div class="cell"><div class="fr">
-	        <div class="sep5">
-	        </div>
-        <a href="/admin/add_cat" class="super normal button">添加新分类</a></div>
+            <div class="sep5">
+            </div>
+        <a href="/admin/create_cat" class="super normal button">添加新分类</a></div>
         <div class="sep5">
         </div><span class="fade">分类</span>
         <div class="sep3">
@@ -44,21 +44,21 @@ $var widgets=['site_statics_widget']
         <div class="grid" style="font-size: 14px;">
             <table cellpadding="10" cellspacing="0" border="0" width="100%">
                 <tbody>
-					$if cats:
-						$for cat_cur in cats:
-							$ cat = cat_cur['cat']
-							<tr>
-							<td align="center" valign="middle" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;">
-								<strong style="font-size: 24px; font-family: DINPro">$cat_cur['node_total']</strong>
-							</td>
-							<td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;">
-								<a href="/admin/cat/$cat.name">$cat.display_name</a>
-                            <div class="sep10">
-                            </div>
-                            <span class="fade" style="font-size: 12px">$cat.description</span>    
-                            </td>
-							</tr>
-            	</tbody>
+                $if cats:
+                $for cat_cur in cats:
+                    $ cat = cat_cur['cat']
+                    <tr>
+                    <td align="center" valign="middle" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;">
+                        <strong style="font-size: 24px; font-family: DINPro">$cat_cur['node_total']</strong>
+                    </td>
+                    <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;">
+                        <a href="/admin/cat/$cat.name">$cat.display_name</a>
+                    <div class="sep10">
+                    </div>
+                    <span class="fade" style="font-size: 12px">&nbsp;$cat.description</span>    
+                    </td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
