--- a/tpl/signup.html
+++ b/tpl/signup.html
@@ -8,7 +8,7 @@ $var title : $title
     </div>
     <div class="inner">
     	<form method="post">
-    		$:form.render()	
+    		$:form.render_css()	
     	</form>
     </div>
 </div>
