--- a/tpl/admin/cat_view.html
+++ b/tpl/admin/cat_view.html
@@ -15,7 +15,7 @@ $var widgets=None
     </div>
     <div class="sep20"></div>
     <div class="box">
-        <div class="cell"><div class="fr"><a href="/admin/create_cat/$cat.name" class="super normal button">添加新节点</a></div><span class="fade">分类下的节点</span></div>
+        <div class="cell"><div class="fr"><a href="/admin/create_node/$cat.name" class="super normal button">添加新节点</a></div><span class="fade">分类下的节点</span></div>
         <div class="grid" style="font-size: 14px;">
             $if nodes:
                 $for node in nodes:
