--- a/tpl/admin/cat_view.html
+++ b/tpl/admin/cat_view.html
@@ -21,6 +21,9 @@ $var widgets=None
                 $for node in nodes:
                     <table cellpadding="10" cellspacing="0" border="0" width="100%">
                         <tbody><tr>
+                            <td align="center" valign="middle" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;">
+                                <img src="$helper.icon_url(node.icon, 'normal')">
+                            </td>
                             <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;">
                                 <a href="/admin/node/$node.name">$node.name</a>
                                 <div class="sep10"></div>
