--- a/tpl/admin/node_view.html
+++ b/tpl/admin/node_view.html
@@ -14,4 +14,23 @@ $var widgets=None
         </div>
     </div>
     <div class="sep20"></div>
+    <div class="box">
+    <div class="cell">图标上传</div>
+    <div class="inner">
+        <table cellpadding="5" cellspacing="0" border="0" width="100%">
+            <tbody><tr>
+                <td width="120" align="right">当前图标</td>
+                <td width="auto" align="left">
+                        <img src="$helper.icon_url(node.icon, 'big')" class="avatar" border="0"> &nbsp; 
+                        <img src="$helper.icon_url(node.icon, 'normal')" class="avatar" border="0"> &nbsp; 
+                        <img src="$helper.icon_url(node.icon, 'tiny')" class="avatar" border="0">
+                </td>
+            </tr>
+            <tr>
+                <td width="120" align="right"></td>
+                <td width="auto" align="left"><input type="button" onclick="location.href = '/admin/node/icon/$node.name';" class="super normal button" value="设置新图标"></td>
+            </tr>
+        </tbody></table>
+    </div>
+</div>
 </div>
