--- a/tpl/node_posts.html
+++ b/tpl/node_posts.html
@@ -6,7 +6,7 @@ $var title: $node.description
 	<div class="box">
 		<div class="header">
 			<div style="float: left; display: inline-block; margin-right: 10px; margin-bottom: 10px;">
-				<img src="http://tb.v2ex.com/navatar/9c83/8d2e/291_large.png?m=1338301531" border="0" align="default" width="auto">
+				<img src="$helper.icon_url(node.icon, 'big')" border="0" align="default" width="auto">
 			</div>
 			<div class="fr f12">
 				<span class="snow">主题总数</span> 
