--- a/tpl/admin/index.html
+++ b/tpl/admin/index.html
@@ -12,18 +12,10 @@ $var widgets=['site_statics_widget']
             <table cellpadding="10" cellspacing="0" border="0" width="100%">
                 <tbody><tr>
                     <td align="center" valign="top" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;"><img src="/static/img/app48.png" align="absmiddle"></td>
-                    <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;"><a href="/backstage/site">站点设置</a>
+                    <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;"><a href="/admin/site">站点设置</a>
                     <div class="sep10">
                     </div>
-                    <span class="fade" style="font-size: 12px">站点名，标语，描述及谁可以发贴，谁可以回帖。</span>    
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" valign="top" width="48" style="border-bottom: 1px solid #e2e2e2; border-right: 1px solid #e2e2e2;"><img src="/static/img/write48.png" align="absmiddle"></td>
-                    <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;"><a href="/backstage/topic">主题设置</a>
-                    <div class="sep10">
-                    </div>
-                    <span class="fade" style="font-size: 12px">配置主题类型。</span>    
+                    <span class="fade" style="font-size: 12px">站点名，描述</span>    
                     </td>
                 </tr>
             </tbody></table>
