--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -1,4 +1,4 @@
-$def with (post, user, comments, form, post_fav, favs, thanks, crumb)
+$def with (post, user, comments, form, post_fav, favs, thanks, crumb, pagination)
 $var title: $post.title
 <div id="Main">
 <div class="sep20">
@@ -49,12 +49,12 @@ $if post.comments > 0:
 	<div class="cell">
 	    <span class="gray">$post.comments 回复 &nbsp;<strong class="snow">|</strong> &nbsp;直到 $helper.cur_date()</span>
 	</div>
-	$ comment_num = 0
+	$ comment_num = (pagination.cur_page-1) * 100
 	$for comment_cur in comments:
 		$ comment_num += 1
 		$ comment = comment_cur['comment']
 		$ comment_user = comment_cur['user']
-		<div class="inner" id="reply-$comment.id">
+		<div class="cell" id="reply-$comment.id">
 		    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 		        <tbody><tr>
 		            <td width="48" valign="top" align="center"><img src="$helper.avatar_url(comment_user.avatar)" class="avatar" border="0"></td>
@@ -84,7 +84,11 @@ $if post.comments > 0:
 		        </tr>
 		    </tbody></table>
 		</div>
+	<div class="inner">
+	    $:pagination.output()
 	</div>
+	</div>
+
 $else:
 	<div class="box transparent">
 	    <div class="inner" style="text-align: center">
