move widget define position

--- a/tpl/avatar.html
+++ b/tpl/avatar.html
@@ -1,5 +1,6 @@
 $def with (title, user, crumb, message='')
 $var title: $title
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20">
 </div>
