--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,5 +1,6 @@
 $def with (cats, posts, title = None)
 $var title : $title
+$var widgets = ['user_panel_widget', 'hot_posts_today_widget', 'site_statics_widget']
 <div id="Main">
 <div class="sep20">
 </div>
