--- a/tpl/create_post.html
+++ b/tpl/create_post.html
@@ -1,5 +1,6 @@
 $def with (form, title, crumb)
 $var title: $title
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20"></div>            
 <div class="box">
