--- a/tpl/following_posts.html
+++ b/tpl/following_posts.html
@@ -1,5 +1,6 @@
 $def with (title, posts, total, crumb, pagination)
 $var title:$title
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20">
 </div>
