--- a/tpl/node_favs.html
+++ b/tpl/node_favs.html
@@ -1,8 +1,8 @@
 $def with (title, posts, total_rows, crumb, pagination)
 $var title:$title
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20">
-	
 </div>
 <div class="box">
     <div class="header">
