--- a/tpl/node_posts.html
+++ b/tpl/node_posts.html
@@ -1,5 +1,6 @@
 $def with (posts, node, total_rows, node_fav, crumb, pagination)
 $var title: $node.description
+$var widgets=['user_panel_widget']
 <div id="Main">
 	<div class="sep20">
 	</div>
