--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -1,8 +1,8 @@
 $def with (post, user, comments, form, post_fav, favs, thanks, crumb, pagination)
 $var title: $post.title
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20">
-	
 </div>
 <div class="box" style="border-bottom: 0px;">
     <div class="header"><div class="fr"><a href="/profile/$user.name">
