--- a/tpl/profile.html
+++ b/tpl/profile.html
@@ -1,5 +1,6 @@
 $def with (title, user, posts, comments, following)
 $var title: $title
+$var widgets = None
 <div id="Main">
 <div class="sep20">
 </div>         
@@ -22,7 +23,7 @@ $var title: $title
                     <span class="bigger gray">$user.signature</span>
                     <div class="sep5">
                     </div>
-                    <span class="fade">$site_title 第 $user.id 号会员，加入于 $helper.stamp2time(user.regist_time)</span>
+                    <span class="fade">$site_options['title'] 第 $user.id 号会员，加入于 $helper.stamp2time(user.regist_time)</span>
                     <div class="sep10">
                     </div>
                     <div class="balance_area" style="">
