--- a/tpl/recent.html
+++ b/tpl/recent.html
@@ -1,5 +1,6 @@
 $def with (title, total, crumb, posts, pagination)
 $var title : $title
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20">
 </div>
