--- a/tpl/settings.html
+++ b/tpl/settings.html
@@ -1,5 +1,6 @@
 $def with (title, user, settings_form, pass_form, crumb)
 $var title : $title
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20"></div>          
 <div class="box">
