--- a/tpl/money_record.html
+++ b/tpl/money_record.html
@@ -1,6 +1,6 @@
 $def with (title, records, crumb, pagination)
 $var title: $title
-$var widgets=['user_panel']
+$var widgets=['user_panel_widget']
 <div id="Main">
 <div class="sep20">
 </div>
