--- a/tpl/admin/cat_view.html
+++ b/tpl/admin/cat_view.html
@@ -25,7 +25,7 @@ $var widgets=None
                                 <img src="$helper.icon_url(node.icon, 'normal')">
                             </td>
                             <td align="left" valign="top" width="auto" style="border-bottom: 1px solid #e2e2e2; background-color: #f9f9f9;">
-                                <a href="/admin/node/$node.name">$node.name</a>
+                                <a href="/admin/node/$node.name">$node.display_name</a>
                                 <div class="sep10"></div>
                                 <span class="fade" style="font-size: 12px">$node.description</span>
                             </td>
