change password & strong auth code

--- a/tpl/settings.html
+++ b/tpl/settings.html
@@ -38,7 +38,7 @@ $var widgets=['user_panel_widget']
 <div class="box">
     <div class="cell"><div class="fr"><span class="fade">如果你不打算更改密码，请留空以下区域</span></div>更改密码</div>
     <div class="inner">
-        <form method="post" action="/settings">
+        <form method="post" action="/settings/password">
         	$:pass_form.render()
         </form>
     </div>
