bug fix & init db

--- a/tpl/admin/layout.html
+++ b/tpl/admin/layout.html
@@ -78,44 +78,23 @@ $:content
 	</div>
 </div>
 		<div id="Bottom">
-			<div class="content">
-				<div class="inner">
+            <div class="content">
+                <div class="inner">
                 <div class="sep10">
                 </div>
-                    <div class="fr">
-                        <a href="http://www.linode.com/?r=af313ea8a6bb6f99aff800c67349cabbfee2682f" target="_blank">
-                        	<img src="/static/img/linode.png" border="0" alt="Linode" width="120"></a>
-                    </div>
-                    <strong><a href="/about" class="dark">关于</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 
-                    	<a href="/faq" class="dark">FAQ</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 
-                    	<a href="/mission" class="dark">我们的愿景</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 
-                    	<a href="/advertise" class="dark">广告投放</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 
-                    	<a href="http://workspace.v2ex.com/" target="_blank" class="dark">工作空间</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 
-                    	<a href="/gadgetlab" class="dark">Gadget Lab</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 
-                    	<a href="http://livid.v2ex.com/" target="_blank" class="dark">博客</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 
-                    	<a href="/start" class="dark">上网首页</a> &nbsp; 
-                    	<span class="snow">·</span> &nbsp; 285 人在线</strong> &nbsp; 
-                    	<span class="fade">最高记录 362</span>
+                    <strong><a href="###" class="dark">关于</a> &nbsp; 
                     <div class="sep20">
                     </div>
                     $site_options['description']
                     <div class="sep5">
                     </div>
-                    Lovingly made by <strong><a href="http://www.olivida.com/" class="dark" target="_blank">OLIVIDA</a></strong>
+                    Copy By <strong><a href="http://rabbit52.com/" class="dark" target="_blank">Rabbit_52</a></strong>
                     <div class="sep20">
                     </div>
-                    <span class="small fade">VERSION: 3.0.0-dev · UTC 05:29 · PVG 13:29 · JFK 01:29 · LAX 22:29<br>♥ Do have a faith in what you're doing.</span>
                 <div class="sep10">
                 </div>
             </div>
-			</div>
-		</div>
+            </div>
+        </div>
 	</body>
 </html>
