--- a/tpl/node_posts.html
+++ b/tpl/node_posts.html
@@ -45,7 +45,7 @@ $if posts:
 			            </div>
 			            <span class="small fade"><strong><a href="/profile/$user.name">$user.name</a></strong> &nbsp;•&nbsp; $helper.stamp2during(post.time)
 			            $if comment_user is not None:
-							 &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$user.name">$comment_user.name</a></strong>
+							 &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$comment_user.name">$comment_user.name</a></strong>
 			            </span>
 			            </td>
 			            <td width="50" align="right" valign="middle">
